style: fix wrong spacing in search screen

--- a/src/components/HorizontalList/HorizontalList.module.scss
+++ b/src/components/HorizontalList/HorizontalList.module.scss
@@ -9,4 +9,13 @@
 
   margin: 0 -80px;
   padding: 24px 80px 0;
+
+  @media screen and (max-width: 576px) {
+    margin: 0 -40px;
+    justify-content: center;
+  }
+
+  @media screen and (max-width: 425px) {
+    margin: 0 -16px;
+  }
 }
