--- a/src/components/SearchCard/SearchCard.module.scss
+++ b/src/components/SearchCard/SearchCard.module.scss
@@ -5,7 +5,7 @@
 
   @media screen and (max-width: 576px) {
     width: 320px;
-    max-width: 60%;
+    flex: 1 1 100%;
   }
 
   >a {
@@ -19,6 +19,10 @@
   .Cover {
     width: 100%;
     height: auto;
+
+    @media screen and (max-width: 576px) {
+      width: auto;
+    }
 
     >img {
       width: 100%;
